RecordListItem bugfix (visibleCategories), map-menu-list.less

--- a/less/ui-components/mapmenu.less
+++ b/less/ui-components/mapmenu.less
@@ -330,287 +330,4 @@
 			}
 		}
 	}
-
-	.heading-list-wrapper {
-		position: absolute;
-
-		top: 132px; // Nordic switch
-//		top: 90px;
-		bottom: 0;
-		right: 0;
-
-		width: 100%;
-
-		max-height: 800px;
-
-		opacity: 0;
-
-		.transform(translateX(50px));
-
-		.transition(all 500ms ease-in-out);
-
-		.transition-delay(0ms);
-
-		pointer-events: none;
-
-		z-index: 1400;
-
-		.app-initialized & {
-			opacity: 1;
-
-			.transform(translateX(0));
-			.transition-delay(600ms);
-		}
-
-		@media (max-width: 550px) {
-			top: 70px;
-		}
-
-		> * {
-			pointer-events: all;
-		}
-
-		.menu-expanded& {
-			top: 140px;
-
-			.transition-delay(0ms);
-		}
-
-		.advanced-menu-view& {
-			max-height: 0;
-
-			.transition-delay(0ms);
-		}
-
-		.list-heading {
-			display: block;
-
-			position: absolute;
-			
-			right: 0;
-
-			width: 350px;
-
-			@media (max-width: 550px) {
-				width: 100%;
-				height: 50px;
-
-				padding: 16px 50px 0 15px;
-			}
-
-			.heading-label {
-				.transition(all 300ms ease-in-out);
-			}
-
-			.minimize-button {
-				position: absolute;
-
-				top: 0;
-				right: 0;
-				bottom: 0;
-
-				width: 66px;
-				height: auto;
-
-				margin: 0;
-				padding: 0;
-
-				border: none;
-				border-left: 1px solid #b5b5b5;
-
-				background-image: url('../img/icon-arrow-right.png');
-				background-repeat: no-repeat;
-				background-position: center;
-
-				@media (max-width: 550px) {
-					width: 50px;
-				}
-
-				span {
-					display: none;
-				}
- 			}
-		}
-
-		.list-container {
-			position: absolute;
-
-			top: 66px;
-			bottom: 0;
-
-			width: 100%;
-			max-height: 450px;
-
-			background: #fff;
-
-			border: 1px solid #ccc;
-			border-radius: 2px;
-			box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
-
-			overflow-y: auto;
-
-			.transition(all 300ms ease-in-out);
-
-			@media (max-width: 550px) {
-				top: 50px;
-			}
-
-			.item {
-				display: block;
-
-				padding: 10px 15px;
-
-				color: #333;
-				text-decoration: none;
-
-				border-bottom: 1px solid #ccc;
-				box-sizing: border-box;
-
-				cursor: pointer;
-
-				&:hover {
-					text-decoration: underline;
-				}
-
-				&.selected {
-					color: #fff;
-
-					background-color: @color-red-lighter;
-				}
-			}
-
-			.grid-list {
-				.item {
-					float: left;
-
-					width: 50%;
-
-					&:nth-child(2n) {
-						border-left: 1px solid #ccc;
-					}
-				}
-			}
-
-			.list-subheading {
-				display: block;
-
-				padding: 10px 15px;
-
-				color: #333;
-				text-decoration: none;
-				font-weight: bold;
-
-				border-bottom: 1px solid #ccc;
-			}
-		}
-
-		&.minimized {
-			.list-heading {
-				left: auto;
-
-				width: 66px;
-
-				padding-left: 0;
-
-				.heading-label {
-					opacity: 0;
-
-					pointer-events: none;
-				}
-
-				.minimize-button {
-					background-image: url('../img/icon-menu-expand.png');
-				}
-
-				@media (max-width: 550px) {
-					width: 50px;
-				}
-			}
-
-			.list-container {
-				max-height: 0;
-
-				opacity: 0;
-
-				pointer-events: none;
-			}
-		}
-	}
-}
-
-.point-type-options {
-	position: absolute;
-
-	width: 350px;
-	height: 72px;
-
-	padding: 0;
-
-	z-index: 1450;
-
-	.option-item {
-		display: inline-block;
-
-		width: 50%;
-		height: 72px;
-
-		font-size: 1.2rem;
-		text-align: center;
-		line-height: 72px;
-
-		box-sizing: border-box;
-
-		cursor: pointer;
-
-		&:first-child {
-			border-right: 1px solid #e8e8e8;
-		}
-
-		.icon {
-			display: inline-block;
-
-			width: 19px;
-			height: 24px;
-
-			margin-right: 10px;
-
-			background-position: center;
-			background-repeat: no-repeat;
-
-			vertical-align: middle;
-
-			&.icon-marker-normal {
-				background-image: url('../img/icon-marker-normal.png');
-			}
-
-			&.icon-marker-curated {
-				background-image: url('../img/icon-marker-curated.png');
-			}
-		}
-
-		.label {
-			display: inline-block;
-		}
-	}
-
-	.selected-line {
-		display: block;
-		
-		position: absolute;
-		
-		left: 25%;
-		bottom: 14px;
-		
-		height: 2px;
-		width: 35%;
-		
-		background: @color-red;
-		
-		.transform(translateX(-50%));
-		.transition(all 300ms ease-in-out);
-
-		.option-2& {
-			left: 75%;
-		}
-	}
 }
