--- a/less/ui-components/popupwindow.less
+++ b/less/ui-components/popupwindow.less
@@ -259,6 +259,11 @@
 
 				object {
 					max-height: 90vh;
+
+					background-color: #f6f6f6;
+					background-image: url(../img/loader.gif);
+					background-position: center;
+					background-repeat: no-repeat;
 				}
 			}
 
